# oracle-rs

./: Cargo.toml  README.md  TODO.md
assets/sqlplus/: README.md  example.sqlplus.out
examples/: error_recovery_probe.rs  example.sql
src/: capabilities.rs  config.rs  connection.rs  constants.rs  crypto.rs  cursor.rs  dbobject.rs  error.rs  ffi.rs  implicit.rs  lib.rs  row.rs  statement.rs
src/buffer/: read.rs  write.rs
src/messages/: accept.rs  auth.rs  data_types.rs  describe.rs  execute.rs  fetch.rs  lob_op.rs  protocol.rs  redirect.rs
src/packet/: header.rs  mod.rs
src/transport/: mod.rs  tcp.rs  tls.rs
src/types/: binary.rs  cursor.rs  date.rs  interval.rs  lob.rs  mod.rs  number.rs  oson.rs  pickle.rs  rowid.rs  vector.rs
tests/: auth_tests.rs  buffer_tests.rs  capabilities_tests.rs  connection_api_tests.rs  connection_handshake_tests.rs  integration_tests.rs  statement_tests.rs
